--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Roboto:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>Jayden.Dev</title>
     <style>
